<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImportExportExcel"
    android:background="#ffffff"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnImportQuestions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_menu_button"
        android:layout_marginBottom="5dip"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_action_upload"
        android:text="@string/import_from_excel" />

    <Button
        android:id="@+id/btnExportQuestions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_menu_button"
        android:layout_marginBottom="5dip"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_action_download"
        android:text="@string/export_questions_to_excel" />
    
    <Button
        android:id="@+id/btnExportStatistics"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_menu_button"
        android:layout_marginBottom="5dip"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_action_download"
        android:text="@string/export_statistics_to_excel" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_export_guide"
        android:background="#f2f2f2"
        android:padding="5dip" />

</LinearLayout>
