<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddQuestion" >

    <EditText
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/AddQuestionHint"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/Options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtQuestion"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtQuestion"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAddOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddOption" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDone" />

        <Button
            android:id="@+id/btnDeleteOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Temizle" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>